--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.8.5",
     "@svgr/webpack": "5.4.0",
+    "firebase": "9.22.0",
     "lockr": "0.9.0-beta.2",
     "lodash": "^4.17.19",
     "moment": "2.29.4",
