--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ts-enum-util": "4.0.2",
     "type-fest": "0.16.0",
     "ua-parser-js": "0.7.21",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "zustand": "4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
